// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration-main empty queue - nothing to do 1`] = `
{
  "BEGIN": 4,
  "COMMIT": 3,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 2,
}
`;

exports[`integration-main error handling on commit errors - isolated transaction mode error on commit 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main error handling on commit errors - isolated transaction mode one red 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main error handling on commit errors - isolated transaction mode one red and one green 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 6,
  "ROLLBACK": 1,
  "UPDATE": 3,
}
`;

exports[`integration-main error handling on commit errors - isolated transaction mode two red 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 6,
  "ROLLBACK": 1,
  "UPDATE": 3,
}
`;

exports[`integration-main hookForExceededEvents hookForExceededEvents throws - rollback + counter increase 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 3,
  "DELETE": 1,
  "READ": 3,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main hookForExceededEvents if event retries is exceeded hookForExceededEvents should be called and correct event status 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 3,
  "DELETE": 1,
  "READ": 3,
  "UPDATE": 2,
}
`;

exports[`integration-main hookForExceededEvents one which is exceeded and one for which the exceeded event has been exceeded 1`] = `
[
  {
    "attempts": 7,
    "status": 4,
  },
  {
    "attempts": 4,
    "status": 4,
  },
]
`;

exports[`integration-main if checkEventAndGeneratePayload methods throws an error --> entry should not be processed + status should be error 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions",
    [Error: error during processing],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`integration-main if checkEventAndGeneratePayload methods throws an error --> entry should not be processed + status should be error 2`] = `
{
  "BEGIN": 5,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main if cluster methods throws an error --> entry should not be processed + status should be error 2`] = `
[
  [
    "Error during clustering of events - setting all queue entries to error.",
    [Error: error during processing],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
    },
  ],
]
`;

exports[`integration-main if cluster methods throws an error --> entry should not be processed + status should be error 3`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 3,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main if modifyQueueEntry methods throws an error --> entry should not be processed + status should be error 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions",
    [Error: error during processing],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`integration-main if modifyQueueEntry methods throws an error --> entry should not be processed + status should be error 2`] = `
{
  "BEGIN": 5,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main if process event returns an error --> tx should be rolled backed 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main if process event throws an error --> tx should be rolled backed 2`] = `
{
  "BEGIN": 7,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main if processing time is exceeded broadcast should trigger processing again 1`] = `
{
  "BEGIN": 8,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main insert one delayed entry and process - should not be processed 1`] = `
{
  "BEGIN": 4,
  "COMMIT": 3,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 2,
}
`;

exports[`integration-main insert one entry and process 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main insert one entry witch checkForNext but return status 0 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main keep alive processing should not process modified events 1`] = `
{
  "BEGIN": 8,
  "COMMIT": 6,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 5,
  "ROLLBACK": 1,
  "UPDATE": 4,
}
`;

exports[`integration-main keep alive processing straight forward 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 5,
  "ROLLBACK": 1,
  "UPDATE": 3,
}
`;

exports[`integration-main lock wait timeout during keepAlive 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 3,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main parallel event processing in the same instance insert 4 entries and select with chunk size one --> should process in parallel - twice 1`] = `
{
  "BEGIN": 15,
  "COMMIT": 10,
  "READ": 15,
  "ROLLBACK": 4,
  "UPDATE": 8,
}
`;

exports[`integration-main parallel event processing in the same instance insert two entries and select with chunk size one --> should process in parallel 1`] = `
{
  "BEGIN": 9,
  "COMMIT": 6,
  "READ": 9,
  "ROLLBACK": 2,
  "UPDATE": 4,
}
`;

exports[`integration-main periodic events transactions modes always commit - use cds.context for db interaction 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main periodic events transactions modes always commit 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main periodic events transactions modes always rollback - use cds.context for db interaction 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main periodic events transactions modes always rollback 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main periodic events transactions modes no tx mode should commit if not exception 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main register retry for failed event after configured interval 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main register retry for failed event after default interval 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 3,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main returning exceeded status should be allowed 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 3,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main returning exceeded status should be allowed 2`] = `
{
  "BEGIN": 3,
  "COMMIT": 3,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 2,
}
`;

exports[`integration-main should do nothing if lock for event combination cannot be acquired 1`] = `
{
  "BEGIN": 2,
  "COMMIT": 1,
  "CREATE": 1,
  "READ": 2,
}
`;

exports[`integration-main should set db user correctly 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main transactionMode=alwaysCommit one green with register rollback in processEvent --> tx rollback even mode alwaysCommit 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "ROLLBACK": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main transactionMode=alwaysCommit one green with register rollback in processEvent --> tx rollback even mode alwaysCommit 2`] = `
[
  {
    "attempts": 1,
    "status": 2,
  },
]
`;

exports[`integration-main transactionMode=alwaysCommit one with error + one without error --> tx no rollback because mode alwaysCommit 2`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 1,
  "UPDATE": 3,
}
`;

exports[`integration-main transactionMode=alwaysCommit one with error + one without error --> tx no rollback because mode alwaysCommit 3`] = `
[
  {
    "attempts": 0,
    "status": 0,
  },
  {
    "attempts": 1,
    "status": 2,
  },
  {
    "attempts": 1,
    "status": 3,
  },
]
`;

exports[`integration-main transactionMode=alwaysRollback one green --> tx rollback even all green 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "ROLLBACK": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main transactionMode=alwaysRollback one green --> tx rollback even all green 2`] = `
[
  {
    "attempts": 1,
    "startAfter": null,
    "status": 2,
  },
]
`;

exports[`integration-main transactionMode=alwaysRollback one with error + one without error --> tx rollback because mode alwaysRollback 2`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main transactionMode=alwaysRollback one with error + one without error --> tx rollback because mode alwaysRollback 3`] = `
[
  {
    "attempts": 1,
    "status": 2,
  },
  {
    "attempts": 1,
    "status": 3,
  },
]
`;

exports[`integration-main transactionMode=isolated both processed register tx rollback - both should be roll back 1`] = `
{
  "BEGIN": 9,
  "COMMIT": 5,
  "CREATE": 3,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 3,
  "UPDATE": 3,
}
`;

exports[`integration-main transactionMode=isolated first processed register tx rollback - only first should be rolled back 1`] = `
[
  {
    "attempts": 0,
    "startAfter": null,
    "status": 0,
  },
  {
    "attempts": 1,
    "startAfter": null,
    "status": 2,
  },
  {
    "attempts": 1,
    "startAfter": null,
    "status": 2,
  },
]
`;

exports[`integration-main transactionMode=isolated first processed register tx rollback - only first should be rolled back 2`] = `
{
  "BEGIN": 8,
  "COMMIT": 5,
  "CREATE": 3,
  "DELETE": 1,
  "READ": 4,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main two entries with no commit on event level 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 6,
  "ROLLBACK": 2,
  "UPDATE": 2,
}
`;
